src/Platform/Code/STE/MiddleWare/MiddleWare.h


typedef char*(__stdcall *pMessageSender)(char*, char*);

MIDDLEWARE_API bool SetCallBack(pMessageSender pCallBack);



//  [5/22/2008 Eddy.Guo]
// Callback Types, implemented in CallbackTypes.cpp
//MIDDLEWARE_API bool CheckAbortStatus(tstring& outputString);
//MIDDLEWARE_API bool ManageResource(char* pAction, char* pResource, tstring& outputString);
//MIDDLEWARE_API bool OutputData(char* pDescription, char* pData, tstring& outputString);
//MIDDLEWARE_API bool OutputDetailResult(char* pDescription, char* pBand, char* pLowLimit, char* pHighLimit, char* pResult, char* pUnits, char* pPassFailFlag, tstring& outputString);
//MIDDLEWARE_API bool OutputHeader(char* pHeader, tstring& outputString);
//MIDDLEWARE_API bool OutputMessage(char* pMessage, tstring& outputString);
//MIDDLEWARE_API bool OutputPrompt(char* pTitle, char* pPrompt, char* PromptType, tstring& outputString);
//MIDDLEWARE_API bool OutputResult(char* pDescription, char* pLowLimit, char* pHighLimit, char* pResult, char* pPassFailFlag, tstring& outputString);
//MIDDLEWARE_API bool OutputStatus(char* pStatusCode, tstring& outputString);


//  [5/22/2008 Eddy.Guo]
// Command Module Dialogs
// Dialog "FlashFlex"
// Dialog "Keypad"


//  [5/22/2008 Eddy.Guo]
// Phone Commands
MIDDLEWARE_API bool Alert(bool alertOn, TCHAR* outputString);

MIDDLEWARE_API bool AntennaPosition(TCHAR* outputString);

MIDDLEWARE_API bool AudioLoopback(TCHAR* loopbackState, TCHAR* outputString);

MIDDLEWARE_API bool AudioMidi(TCHAR playState, TCHAR* outputString);

MIDDLEWARE_API bool AudioTest(TCHAR* audioState, TCHAR* outputString);

MIDDLEWARE_API bool CallDropLogger(TCHAR* readType, TCHAR* outputString);

MIDDLEWARE_API bool CameraFlashLED(TCHAR ledOn, TCHAR* outputString);

MIDDLEWARE_API bool CameraImage(TCHAR* cameraState, TCHAR* outputString);

MIDDLEWARE_API bool CameraViewfinder(TCHAR* viewFinderOn, TCHAR* outputString);

MIDDLEWARE_API bool CliDisplay(TCHAR* onOrOff, TCHAR* outputString);

MIDDLEWARE_API bool CliDisplayBacklight(TCHAR* backLightOn, TCHAR* outputString);

MIDDLEWARE_API bool Clock(TCHAR* outputString);

MIDDLEWARE_API bool Dtmf(TCHAR* tone, TCHAR* volume, TCHAR* audioState, TCHAR* outputString);

//MIDDLEWARE_API bool EnableTSB();
MIDDLEWARE_API bool Flip(TCHAR* outputString);

MIDDLEWARE_API bool FunLight(TCHAR* ledColor, TCHAR* lefOn, TCHAR* outputString);

MIDDLEWARE_API bool HeadSet(TCHAR* outputString);

MIDDLEWARE_API bool HeadsetLoopback(TCHAR* loopbackState, TCHAR* outputString);

MIDDLEWARE_API bool InternalCameraImage(TCHAR* cameraState, TCHAR* outputString);

MIDDLEWARE_API bool InternalCameraViewfinder(TCHAR* viewFinderOn, TCHAR* outputString);

MIDDLEWARE_API bool INVMMasterClear(TCHAR* outputString);

MIDDLEWARE_API bool KeypadBacklight(TCHAR* backLightOn, TCHAR* outputString);

MIDDLEWARE_API bool LedStatusLight(TCHAR* ledColor, TCHAR* outputString);

MIDDLEWARE_API bool LightSensor(TCHAR* outputString);

MIDDLEWARE_API bool MainDisplay(TCHAR* onOrOff, TCHAR* outputString);

MIDDLEWARE_API bool MainDisplayBacklight(TCHAR* backLightOn, TCHAR* outputString);

MIDDLEWARE_API bool MemoryCardDetect(TCHAR* suspend, TCHAR* outputString);

MIDDLEWARE_API bool MemoryCardRead(TCHAR* restart, TCHAR* outputString);

//MIDDLEWARE_API bool MFTVibrator();
MIDDLEWARE_API bool OpProfLogger(TCHAR* purge, TCHAR* outputString);

MIDDLEWARE_API bool PanicAccumulatorLogger(TCHAR* purge, TCHAR* outputString);

MIDDLEWARE_API bool PanicCodeReader(TCHAR* outputString);

MIDDLEWARE_API bool Ping(TCHAR* outputString);

MIDDLEWARE_API bool PowerOff(TCHAR* outputString);

MIDDLEWARE_API bool PressKey(TCHAR* keyCode, TCHAR* outputString);

MIDDLEWARE_API bool ReadBand(TCHAR* outputString);

MIDDLEWARE_API bool ReadBootLoaderVersion(TCHAR* outputString);

MIDDLEWARE_API bool ReadChargingStatus(TCHAR* chargeType, TCHAR* outputString);

MIDDLEWARE_API bool ReadESN(TCHAR* outputString);

MIDDLEWARE_API bool ReadFactoryBoardAssembly(TCHAR* outputString);

MIDDLEWARE_API bool ReadFactoryByte(TCHAR* outputString);

MIDDLEWARE_API bool ReadFactoryLastStationDateTime(TCHAR* outputString);

MIDDLEWARE_API bool ReadFactoryTrackId(TCHAR* outputString);

MIDDLEWARE_API bool ReadFlexVersion(TCHAR* outputString);

MIDDLEWARE_API bool ReadGatewayIP(TCHAR* outputString);

//MIDDLEWARE_API bool ReadIMEI();
MIDDLEWARE_API bool ReadKeypress(TCHAR* outputString);

MIDDLEWARE_API bool ReadLifetimeTimer(TCHAR* outputString);

MIDDLEWARE_API bool ReadLockCode(TCHAR* outputString);

MIDDLEWARE_API bool ReadMEID(TCHAR* outputString);

MIDDLEWARE_API bool ReadMin(TCHAR* outputString);

MIDDLEWARE_API bool ReadModel(TCHAR* outputString);

MIDDLEWARE_API bool ReadMotoXPRSLogs(TCHAR* outputString);

MIDDLEWARE_API bool ReadPrlVersion(TCHAR* outputString);

MIDDLEWARE_API bool ReadProductionState(TCHAR* outputString);

MIDDLEWARE_API bool ReadSecurityCode(TCHAR* outputString);

MIDDLEWARE_API bool ReadSWVersion(TCHAR* outputString);

MIDDLEWARE_API bool ReadWapIPAddress(TCHAR* outputString);

MIDDLEWARE_API bool Restart(TCHAR* outputString);

MIDDLEWARE_API bool RFProbeConnected(TCHAR* outputString);

MIDDLEWARE_API bool VerifyBluetooth(TCHAR* outputString);

MIDDLEWARE_API bool Vibrator(TCHAR* vibratoeOn, TCHAR* outputString);

MIDDLEWARE_API bool WriteFactoryByte(TCHAR* factoryByte, TCHAR* outputString);

MIDDLEWARE_API bool WriteLifetimeTimer(TCHAR* livetime, TCHAR* outputString);

MIDDLEWARE_API bool WriteLockCode(TCHAR* lockCode, TCHAR* outputString);

MIDDLEWARE_API bool WriteSecurityCode(TCHAR* securityCode, TCHAR* outputString);