src/Platform/Code/STE/ODMSkeleton/DllWrapper.vb

Option Strict On
Option Explicit On

Imports System.Runtime.InteropServices

''' <summary>
''' This class provides access to an external C++ dll.
''' </summary>
''' <remarks>This class requires access to the QisdaService.dll file.</remarks>
''' Embert Tsai. For the purpose of DLL management, change QisdaService.dll to a more meaning name.
Public Class DllWrapper
    'Declare a delegate in the correct format to send to the C++ dll.
    Private Delegate Function DllCallBack(ByVal type As String, ByVal data As String) As String
    Private Declare Function DllSetCallBack Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "SetCallBack" (<MarshalAs(UnmanagedType.FunctionPtr)> ByVal func As DllCallBack) As Boolean

#Region "Functions Export -- Phone Commands"
    Private Declare Function DllAlert Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Alert" (ByVal alertOn As Boolean, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllAntennaPosition Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "AntennaPosition" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllAudioLookback Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "AudioLoopback" (ByVal loopbackState() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllAudioMidi Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "AudioMidi" (ByVal playState() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllAudioTest Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "AudioTest" (ByVal audioState() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllCallDropLogger Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "CallDropLogger" (ByVal readType() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllCameraFlashLED Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "CameraFlashLED" (ByVal ledOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllCameraImage Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "CameraImage" (ByVal cameraState() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllCameraViewfinder Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "CameraViewfinder" (ByVal viewFinderOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllCliDisplay Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "CliDisplay" (ByVal onOrOff() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllCliDisplayBacklight Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "CliDisplayBacklight" (ByVal backLightOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllClock Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Clock" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllDtmf Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Dtmf" (ByVal tone() As Byte, ByVal volume() As Byte, ByVal audioState() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllFlip Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Flip" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllFunLight Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "FunLight" (ByVal ledColor() As Byte, ByVal lefOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllHeadSet Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "HeadSet" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllHeadsetLoopback Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "HeadsetLoopback" (ByVal loopbackState() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllInternalCameraImage Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "InternalCameraImage" (ByVal cameraState() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllInternalCameraViewfinder Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "InternalCameraViewfinder" (ByVal viewFinderOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllINVMMasterClear Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "INVMMasterClear" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllKeypadBacklight Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "KeypadBacklight" (ByVal backLightOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllLedStatusLight Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "LedStatusLight" (ByVal ledColor() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllLightSensor Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "LightSensor" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllMainDisplay Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "MainDisplay" (ByVal onOrOff() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllMainDisplayBacklight Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "MainDisplayBacklight" (ByVal backLightOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllMemoryCardDetect Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "MemoryCardDetect" (ByVal suspend() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllMemoryCardRead Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "MemoryCardRead" (ByVal restart() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllOpProfLogger Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "OpProfLogger" (ByVal purge() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllPanicAccumulatorLogger Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "PanicAccumulatorLogger" (ByVal purge() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllPanicCodeReader Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "PanicCodeReader" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllPing Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Ping" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllPowerOff Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "PowerOff" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllPressKey Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "PressKey" (ByVal keyCode() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadBand Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadBand" (ByVal outputString() As Byte) As Boolean
    'Private Declare Function DllReadBootLoaderVersion Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadBootLoaderVersion" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadChargingStatus Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadChargingStatus" (ByVal chargeType() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadESN Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadESN" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadFactoryBoardAssembly Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadFactoryBoardAssembly" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadFactoryByte Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadFactoryByte" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadFactoryLastStationDateTime Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadFactoryLastStationDateTime" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadFactoryTrackId Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadFactoryTrackId" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadFlexVersion Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadFlexVersion" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadGatewayIP Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadGatewayIP" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadKeypress Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadKeypress" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadLifetimeTimer Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadLifetimeTimer" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadLockCode Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadLockCode" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadMEID Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadMEID" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadMin Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadMin" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadModel Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadModel" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadMotoXPRSLogs Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadMotoXPRSLogs" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadPrlVersion Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadPrlVersion" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadProductionState Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadProductionState" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadSecurityCode Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadSecurityCode" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadSWVersion Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadSWVersion" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllReadWapIPAddress Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadWapIPAddress" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllRestart Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Restart" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllRFProbeConnected Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "RFProbeConnected" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllVerifyBluetooth Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "VerifyBluetooth" (ByVal outputString() As Byte) As Boolean
    Private Declare Function DllVibrator Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Vibrator" (ByVal vibratoeOn() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllWriteFactoryByte Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "WriteFactoryByte" (ByVal factoryByte() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllWriteLifetimeTimer Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "WriteLifetimeTimer" (ByVal livetime() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllWriteLockCode Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "WriteLockCode" (ByVal lockCode() As Byte, ByVal outputString() As Byte) As Boolean
    Private Declare Function DllWriteSecurityCode Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "WriteSecurityCode" (ByVal securityCode() As Byte, ByVal outputString() As Byte) As Boolean
